--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,10 +1,10 @@
-server.port=8009
+server.port=8010
 server.servlet.context-path=/api
 spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost:3306/cell_link?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 aliyun.accessKeyId=LTAIOnROT0Zn3EL6
 aliyun.accessKeySecret=AKVqINrsKfhJiQf1nBtBR76DQw9Jog
